fix for bug #188593.  the account order in the account manager can be unpredictably wacky, so change how we do it. r/sr=bienvenu